# My-Practise

./: .gitignore
async-server/: CMakeLists.txt  EventLoop.cpp  IPV4.cpp  IPV4.hpp  Parser.cpp  Parser.hpp  TcpServer.cpp  io_uring_handle.cpp  io_uring_handle.hpp  main.cpp  makefile  xmake.lua
async-server/include/: EventLoop.hpp  TcpServer.hpp  io_uring_handle.hpp
async-server/lib/: liburing.so.2.2
async-server/server/: CMakeLists.txt  EventLoop.cpp  io_uring_handle.cpp
design_pattern/Adapter/: Adapter.hpp  test.cpp
design_pattern/Decorator/: Decorator.hpp  test.cpp
design_pattern/Observer/: Observer.hpp  test.cpp
design_pattern/Proxy/: Proxy.cpp  Proxy.hpp  test.cpp
design_pattern/Singleton/: Singleton.cpp  Singleton.hpp  test.cpp
linux/: cshrlinux.cpp  cshrlinux.hpp
lockfree/: Concurrent.hpp  Sanitizer.hpp
log/: cshrlog.hpp
luogu/: B3602.cpp  B3605.cpp  B3611.cpp  B3612.cpp  B3613.cpp  B3615.cpp  B3617.cpp  B3622.cpp  B3633.cpp  B3645.cpp  P3386.cpp  P3811.cpp
nanolog/: Logger.cpp  xmake.lua
nanolog/include/: FormatUtil.hpp  Logger.hpp  LoggerConfig.hpp  LoggerInfo.hpp  Service.hpp  SwapBuffer.hpp  Sync.hpp  Timer.hpp  TypeUtil.hpp  UserLog.hpp
nanolog/include/liburing/: liburing.h
nanolog/test/: UserInterfaceTest.cpp
rbtree/: rbtree.hpp
refbase/: refbase.cpp  refbase.hpp
test/threadpool_emplace_test/: makefile  test.cpp
test/threadpool_queue_stack_test/: makefile  test.cpp
threadpool/: TaskWrapper.hpp  ThreadPool.cpp  ThreadPool.hpp
